--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,12 +4,12 @@ body {
     padding-top: 4.5rem;
   }
   
-  h2, h3, h4{
+  h1, h2, h3, h4{
       font-family: 'Yellowtail', cursive;
      
   }
 
-  h5{
+  h5 {
     font-family: 'Noto Sans JP', sans-serif;
   }
 
@@ -17,3 +17,9 @@ body {
       font-size: 18px;
       font-family: 'Open Sans', sans-serif;
   }
+
+  a {
+    font-family: 'Mukta', sans-serif;
+}
+
+ 
