--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,14 +9,15 @@ body {
     
   }
   
-  .fadeIn_left {
-    opacity: 0;
-    transform: translate(-50%, 0);
-    transition: 2s;
+  .container {
+    opacity : 0;
+    transform : translate(0, 100px);
+    transition : all 1s;
   }
-  .fadeIn_left.is-show {
-    transform: translate(0, 0);
-    opacity: 1;
+   
+  .container.active{
+    opacity : 1;
+    transform : translate(0, 0);
   }
 
 
