--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,16 @@ body {
     
   }
   
+
+  .bg-image {
+      background-image: url(img/tropical-beach.jpeg);
+      background-position: center;
+      background-size: auto;
+      width: 100%;
+      height: 400px;
+  
+  }
+
   .container {
     opacity : 0;
     transform : translate(0, 100px);
